--- a/pipelines.yml
+++ b/pipelines.yml
@@ -3,7 +3,7 @@ resources:
     type: GitRepo
     configuration:
       # SCM integration where the repository is located
-      gitProvider: GitHub # this will be replaced from values.yml
+      gitProvider: MyGitHub # this will be replaced from values.yml
       # Repository path, including org name/repo name
       path: KaramJaber99/Jfrog-ArtifactoryCLI
       branches:
