--- a/dockerpipeline.yml
+++ b/dockerpipeline.yml
@@ -7,7 +7,7 @@ resources:
       branches:
         include: master
 
-  - name: dbp_image
+  - name: JfrogCli_image
     type: Image
     configuration:
       registry: MyArtifactory                        # <-- replace with your artifactory integration
@@ -67,7 +67,7 @@ pipelines:
           outputResources:
             - name: JfrogCli_build_info
 
-      - name: promote_dbp_build
+      - name: promote_JfrogCli_build
         type: PromoteBuild
         configuration:
           targetRepository: demo-pipelines
