--- a/dockerpipeline.yml
+++ b/dockerpipeline.yml
@@ -7,7 +7,7 @@ resources:
       branches:
         include: master
 
-  - name: dbp_image
+  - name: JfrogCli_image
     type: Image
     configuration:
       registry: MyArtifactory                        # <-- replace with your artifactory integration
