--- a/dockerpipeline.yml
+++ b/dockerpipeline.yml
@@ -7,7 +7,7 @@ resources:
       branches:
         include: master
       buildOn:
-        commit: false
+        commit: true
 
   - name: jfrogcli_image
     type: Image
